bin/testsuite/tests/compiler/src/errors/compiler5587.swg
#global testerror "Err0091"

//#include <stdio.h>

func main()->s32
{
    // printf() displays the string inside quotation
    printf("Hello, World!")
    return 0
}
